WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53910
Web Inspector: highlighter works incorrect at build.chromium.org WebKit cells
https://bugs.webkit.org/show_bug.cgi?id=53910
Summary
Web Inspector: highlighter works incorrect at build.chromium.org WebKit cells
Ilya Tikhonovsky
Reported
2011-02-07 01:29:42 PST
1) open
http://build.chromium.org/p/chromium/console
2) do inspect element on a WebKit bot's status bot expected: box is highlighted, text description is attached to the highlight frame. actual: text description shown ~100px lower
Attachments
[PATCH] Suggested fix
(2.25 KB, patch)
2011-02-14 03:20 PST
,
Alexander Pavlov (apavlov)
yurys
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2011-02-14 03:20:53 PST
Created
attachment 82300
[details]
[PATCH] Suggested fix
WebKit Commit Bot
Comment 2
2011-02-14 09:43:05 PST
Comment on
attachment 82300
[details]
[PATCH] Suggested fix Rejecting
attachment 82300
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'build-..." exit_code: 2 Last 500 characters of output: launch-safari', '--exit-after-n..." exit_code: 1 ............................................................................................................................................... inspector ...................................................................... inspector/styles-iframe.html -> failed Exiting early after 1 failures. 12662 tests run. 327.54s total testing time 12661 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 8 test cases (<1%) had stderr output Full output:
http://queues.webkit.org/results/7907646
Alexander Pavlov (apavlov)
Comment 3
2011-02-15 06:41:36 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebCore/ChangeLog M Source/WebCore/inspector/InspectorAgent.cpp Committed
r78553
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug