2011-02-14  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: highlighter works incorrect at build.chromium.org WebKit cells
        https://bugs.webkit.org/show_bug.cgi?id=53910

        Use enclosingBoundingBox for the absolute margin quad as the reference box for a tooltip.

        * inspector/InspectorAgent.cpp:
        (WebCore::InspectorAgent::drawNodeHighlight):


Canonical link: https://commits.webkit.org/68550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78553 268f45cc-cd09-0410-ab3c-d52691b4dbfc